--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '5.0.x'  # 根据你的项目需求调整.NET版本
+        dotnet-version: '8.0'  # 根据你的项目需求调整.NET版本
 
     - name: Restore dependencies
       run: dotnet restore
